# diabot

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: main.rs
src/commands/: convert.rs
src/conversions/: a1c.rs  glucose.rs  glucose_tests.rs  mod.rs
src/util/: colors.rs
