[package]
name = "diabot"
description = "A diabetes chat bot for Discord"
readme = "README.md"
repository = "https://github.com/cascer1/diabot"
license = "AGPL-3.0-only"
keywords = ["diabetes", "chatbot", "discord"]
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
poise = "0.6.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
dotenvy = "0.15.7"
